force-app/main/default/objects/Google_Maps_Config__c/Google_Maps_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google Maps Config</label>
</CustomObject>