force-app/main/default/objects/Google_Maps_Config__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Daily Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>