force-app/main/default/objects/Google_Maps_Config__c/fields/Distance_Method__c.field-meta.xml
<CustomField>
    <fullName>Distance_Method__c</fullName>
    <defaultValue>"Distance Matrix"</defaultValue>
    <label>Distance Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>