force-app/main/default/objects/Google_Maps_Config__c/fields/Last_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reset_Date__c</fullName>
    <label>Last Reset Date</label>
    <type>Date</type>
</CustomField>